--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,26 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+.goal-list {
+  list-style: none;
+  margin: 2 rem 0;
+  padding: 9;
+}
+
+
+.goal-list li{
+  margin: 1rem 0;
+  border: 1px solid;
+  padding: 1rem;
+
+}
+
+
+.goals{
+  text-align: center;
+}
+
+
